--- a/src/main/resources/static/invite.html
+++ b/src/main/resources/static/invite.html
@@ -2,12 +2,12 @@
 <body>
 <img src='{{IMAGE_URL}}'
      alt='Uket Logo'
-     style='width: 200px; height: auto; margin-bottom: 20px;'>
+     style='width: 50%; height: auto; margin-bottom: 20px;'>
 <p>안녕하세요, Uket팀입니다.</p>
 <p>사용자 추가가 완료되어 하단의 회원가입 링크를 전달드립니다.</p>
 <br><p>회원가입을 완료한 후, 어드민 서비스를 이용해주세요.</p>
 <br><p style='font-weight: bold;'>Uket admin 회원가입 링크 :
-  <a href='{{SIGNUP_LINK}}'>회원가입 바로가기</a></p>
+  <a href='{{SIGNUP_LINK}}'>{{SIGNUP_LINK}}</a></p>
 <br><p>감사합니다.</p>
 </body>
 </html>
