feat: 메일 형식 변경

--- a/src/main/resources/static/invite.html
+++ b/src/main/resources/static/invite.html
@@ -5,9 +5,22 @@
      style='width: 50%; height: auto; margin-bottom: 20px;'>
 <p>안녕하세요, Uket팀입니다.</p>
 <p>사용자 추가가 완료되어 하단의 회원가입 링크를 전달드립니다.</p>
-<br><p>회원가입을 완료한 후, 어드민 서비스를 이용해주세요.</p>
-<br><p style='font-weight: bold;'>Uket admin 회원가입 링크 :
-  <a href='{{SIGNUP_LINK}}'>{{SIGNUP_LINK}}</a></p>
-<br><p>감사합니다.</p>
+<br>
+<p>아래 링크를 통해 초대를 수락하고 비밀번호를 설정해주세요.<br>
+  설정이 완료되면 현재 이메일로 Uket 서비스를 이용하실 수 있습니다.</p>
+
+<br>
+<a href='{{SIGNUP_LINK}}' style="
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #7250FD;
+    color: white;
+    text-decoration: none;
+    border-radius: 6px;
+    font-weight: bold;
+">초대수락</a>
+
+<br><br>
+<p>감사합니다.</p>
 </body>
 </html>
