--- a/src/main/resources/static/invite.html
+++ b/src/main/resources/static/invite.html
@@ -6,7 +6,7 @@
 <p>안녕하세요, Uket팀입니다.</p>
 <p>사용자 추가가 완료되어 하단의 회원가입 링크를 전달드립니다.</p>
 <br>
-<p>아래 링크를 통해 초대를 수락하고 비밀번호를 설정해주세요.<br>
+<p>아래 링크를 24시간 안에 접속해 초대를 수락하고 비밀번호를 설정해주세요.<br>
   설정이 완료되면 현재 이메일로 Uket 서비스를 이용하실 수 있습니다.</p>
 
 <br>
